--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "lottie-react-native": "6.7.0"
+    "lottie-react-native": "6.7.0",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
